--- a/frontend/src/bootstrap/bootstrap.css
+++ b/frontend/src/bootstrap/bootstrap.css
@@ -3,6 +3,7 @@
     
     --bs-info:#bcf2ff;
     --bs-secondary:silver;
+    --bs-silver:#4542427e;
     --bs-grey:#ffffff;
     --bs-danger:red;
     --bs-primary:#0099ff;
@@ -13,6 +14,8 @@
     --bs-black2:#151515;
     --bs-black3:#202020;
     --bs-gold:#b8b500;
+    --cursive:"Ms Madi";
+    --regular:"Poppins";
     --bs-font-sans-serif:system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     --bs-font-monospace:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
     --bs-gradient:linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0))
