--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -132,18 +132,32 @@
         transition:.5s;
         margin:7px 0;
         background: var(--bs-black3) !important;
-        border:1px solid #202020;
+        border:1px solid #3a3a3a;
     }
     .myBoxxes .card:hover{
         box-shadow:0px 0px 2px rgb(0, 0, 0);
         background: var(--bs-dark) !important;
+        border:1px solid #505050;
     }
-
     .myBoxxes .card .badge{
-        background: var(--bs-black2) !important;
+        background: green !important;
+        background:black;
+        color:#e3e3e3;
+        padding:7px 20px;
+        border-radius:0;
+        font-weight:600;
+        text-transform:uppercase;
+        box-shadow:inset 0 0 2px #797979;
+        transition:.8s;
+        position: relative;
+        top:0;
+        border-radius:40px;
+        transform:rotate(0) scale(1);
     }
     .myBoxxes .card:hover .badge{
-        background: var(--bs-success)!important;
+        color:white;
+        border-radius:40px;
+       
     }
     .myBoxxes1 .card,.myBoxxes .card{
         margin:13px 0;
@@ -153,27 +167,46 @@
         background: var(--bs-black3) !important;
     }
     /* Larger than 992px View */
+
     .myBoxxes12 .card{
         cursor:pointer;
         background:var(--bs-black2);
         transition:.8s;
+        margin:10px 0px;
     }
-
+    
+    
     .myBoxxes12 img{
         filter:brightness(0.5);
-        height:140px;
+        height:180px;
     }
-    .myBoxxes12:hover img{
+    .swiper-slide-visible{
+        transform: scale(1) !important;
+    }
+    .swiper-slide-prev,.swiper-slide-next{
+        transform:scale(0.7)!important; 
+    }
+    .swiper-slide-visible img,.myBoxxes12:hover img{
         filter:brightness(1);
     }
-   
-   
-    .myBoxxes12 .url{
-        background:#353635;
-        border-radius:60px;
+    .swiper-slide-prev img,.swiper-slide-next img{
+        filter:brightness(0.5);
+        transform:scale(1); 
     }
-    .myBoxxes12:hover .url{
-        background:#01600b;
+    .myBoxxes12 .url{
+        position: relative;
+        z-index:11;
+        border-radius:60px;
+        color:grey;
+        border:1px solid;
+    }  
+    .myBoxxes12:hover .url,.swiper-slide-visible .url{
+        color: var(--bs-success) !important;
+    }
+    .swiper-slide-prev .url,.swiper-slide-next .url{
+        background:black;
+        color: grey !important;
+        font-weight:600;
     }
     .experience{
         background:var(--bs-black3);
@@ -223,7 +256,11 @@
         .myBoxxes12 img{
             height:260px;
         }
-        
+        .myAbout .name span{
+            color: transparent !important;
+            background:linear-gradient(to left,#e1e1e1,#5b5b5b);
+            background-clip:text;
+        }
         .myimage img{
             border-radius:100%;
         }
@@ -290,11 +327,7 @@
         }
         .myBoxxes .card:hover{
             top:-10px;
-        }
-        
-        
-          
-       
+        }       
         .myAbout .role{
             font-size:50px;
             background:var(--bs-secondary);
@@ -312,7 +345,6 @@
             display:flex;
         }
         .socialmedia-linkss i{
-           
             text-align:center;
             display:flex;
             justify-content:center;
@@ -323,8 +355,6 @@
             top:0px;
             transition:.3s;
         }
-
-        
     }  
 
   
