--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -12,7 +12,6 @@
     a{
         text-decoration:none;
         cursor:pointer;
-        text-transform:capitalize;
         cursor:pointer;
     }
     .container-fluid:nth-child(odd){
@@ -48,17 +47,16 @@
         animation:2s imgAnim infinite alternate;
     }
     .myimage img{
-        width:70%;
-        border-radius:100%;
+        width:75%;
+        border-radius:10% 30%;
+        filter:brightness(0.6) saturate(0.7) contrast(1.23);
         transition:.3s;
     }
     @keyframes imgAnim {
         from{
             transform:translateY(2%);
-            filter:brightness(0.6) saturate(0);
         }
         to{
-            filter:brightness(0.8) saturate(0);
             transform:translateY(-2%);
         }
     }
@@ -210,7 +208,7 @@
         border:1px solid #a0a5a0;
     }
     .myBoxxes12 .mydiv{
-        width:75%;
+        width:50%;
     }
     .myBoxxes12 .url{
         position: relative;
@@ -387,6 +385,9 @@
             padding:4px 10px;
             top:0px;
             transition:.3s;
+        }
+        .myBoxxes12 .mydiv{
+            width:75%;
         }
     }  
 
