--- a/frontend/src/bootstrap/bootstrap.css
+++ b/frontend/src/bootstrap/bootstrap.css
@@ -1,11 +1,11 @@
 
 :root{
     
-    --bs-info:#bcf2ff;
-    --bs-secondary:silver;
+    --bs-info:#9d9a00;
+    --bs-secondary:#cccccc;
     --bs-silver:#4542427e;
     --bs-grey:#ffffff;
-    --bs-danger:red;
+    --bs-danger:#fe8b5a;
     --bs-primary:#0099ff;
     --bs-warning:#ffc456;
     --bs-success:#1ab004;
