--- a/frontend/src/bootstrap/bootstrap.css
+++ b/frontend/src/bootstrap/bootstrap.css
@@ -8,10 +8,10 @@
     --bs-danger:#fe8b5a;
     --bs-primary:#0099ff;
     --bs-warning:#ffc456;
-    --bs-success:#1ab004;
+    --bs-success:#1db010;
     --bs-light:white;
     --bs-dark:#0e0d0d;
-    --bs-black2:#151515;
+    --bs-black2:#1d1d1df3;
     --bs-black3:#202020;
     --bs-gold:#b8b500;
     --cursive:"Ms Madi";
