--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -1,6 +1,7 @@
 
     *{
         color:var(--bs-secondary);
+        font-family:var(--regular);
     }
     .home-section-padding{
         position: relative !important;;
@@ -8,6 +9,17 @@
     body{
         background:var(--bs-dark);
     }
+   
+    .myNavbar::before{
+        content:'';
+        position:absolute;
+        height:1px;
+        width: 110% !important;
+        z-index: 10000 !important;
+        top:0;
+        background:linear-gradient(to right,#0dbc2a,#e2e60b,#0a9b2e);
+    }
+
     .navbar-nav a{
         margin-left:30px;
     }
@@ -17,7 +29,7 @@
         padding:10px;
         font-weight:1000;
         font-size:20px;
-        box-shadow:0px 0px 5px #00ad56;
+        box-shadow:0px 0px 5px var(--bs-success);
         z-index:1;
     }
     a{
@@ -31,10 +43,12 @@
     .navbar-brand a{
         cursor:pointer;
         opacity:.8;
-        font-weight:200;
-        color:var(--bs-light)!important;
-        font-family:var(--regular);
+        font-weight:900;
+        text-shadow:0px 1px 0px var(--bs-success);
+        font-family:var(--cursive);
+        color:var(--bs-success);
     }
+    
     .bg-social{
         position: relative;
         top:0;
@@ -80,30 +94,29 @@
         color:var(--bs-light);    
     }
     .myimage{
-        border-radius:100%;
         width:100%;
         height:100%;
-        animation:2s imgAnim infinite alternate;
     }
     .myimage img{
-        width:80%;
-        border-radius:15% 45%;
-        border:10px solid #766f6f97;
-        filter:brightness(0.9) saturate(0.6) contrast(1.2);
+        filter:brightness(0.9);
+        width:30%;
+        border-radius:0 65% 65%;
+        border:4px solid var(--bs-success);
+        box-shadow:10px 20px 500px var(--bs-success),-10px -20px 6500px red;
         transition:.3s;
     }
     @keyframes imgAnim {
-        from{
+        0%{
             transform:translateY(2%);
         }
-        to{
-            transform:translateY(-2%);
+        100%{
+            transform:translateY(0%);
         }
     }
     
 
     ::-webkit-scrollbar {
-        width:6px; 
+        width:0px; 
     }
     
 
@@ -159,8 +172,8 @@
         position:relative;
     }
     .myNavbar{
-        box-shadow:0px 0px 5px var(--bs-black2);
-        border-bottom:1px solid var(--bs-black3);
+        box-shadow:0px 0px 2px rgb(44, 43, 43);
+        border-bottom:3px solid var(--bs-black3);
     }
     .myBoxxes .card{
         transition:.5s;
@@ -252,11 +265,11 @@
     }  
     .myBoxxes12:hover .url{
         color: silver;
-        background:green;
+        background:var(--bs-success);
         border-color:var(--bs-success);
     }
     .myBoxxes12 .url:hover{
-        background: green;
+        background: var(--bs-success);
         color: white ;
         border-color:var(--bs-success);
     }
@@ -292,10 +305,9 @@
     }
     
     .myAbout .name{
-        font-size:13px;
-        text-transform:uppercase;
+        font-size:12px;
+        text-transform:capitalize;
         font-weight:700;
-        letter-spacing:3px;
         color:var(--bs-success);
         margin-bottom:10px;
     }
@@ -326,16 +338,28 @@
             color: var(--bs-light);
         }
         .myimage img{
+            width:75%;
             border-radius:100%;
             border:none;
+            box-shadow:none;
+            filter:grayscale() contrast(1.2) brightness(0.7);
+            animation:none!important;
         }
-        
+        @keyframes imgAnim11 {
+            0%{
+                transform:translateY(2%);
+            }
+            
+            100%{
+                transform:translateY(-2%);
+            }
+        }
         .home-section-padding{
             padding:130px 15px 50px;
             position: relative;
         }
         .navbar-nav a{
-            font-family:var(--regular);
+
             color: var(--bs-light) !important;
             margin-left:10px;
             border-radius:40px;
@@ -370,26 +394,27 @@
             font-size:32px;
             opacity:.8;
             font-weight:200;
-            color:var(--bs-light)!important;
-            font-family:var(--regular);
+            
+
         }
         .section-padding{
             padding:50px;
         }
         
         .section-padding h1,.home-section-padding h1{
-            font-family:var(--regular);
+
             font-size:25px;
             font-weight:300;
         }
         .section-padding h1>span,.home-section-padding h1>span{
-            color:var(--bs-success);
+            
             font-weight:600;
             margin-left:4px;
             border-radius:40px;
         }
             
         .myAbout .role{
+            font-family:var(--cursive);
             font-size:50px;
             background:var(--bs-secondary);
             background-clip:text;
