--- a/admin/src/bootstrap/bootstrap.css
+++ b/admin/src/bootstrap/bootstrap.css
@@ -6,7 +6,7 @@
     --bs-danger:red;
     --bs-primary:#0099ff;
     --bs-warning:#ffc456;
-    --bs-success:#1ea100;
+    --bs-success:#44d7a6;
     --bs-light:white;
     --bs-dark:#000000;
     --cursive:'Ms madi';
